--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,52 +1,48 @@
-name: noted_app
-description: A new Flutter project.
+name: chat_app
+description: A new Flutter application.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# Read more about versioning at semver.org.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  flappy_search_bar:
   flutter:
     sdk: flutter
-  flutter_plugin_pdf_viewer:
-  url_launcher: 5.4.10
-  file_picker: ^1.10.0
-  firebase_core: ^0.4.5
-  firebase_auth: ^0.16.1
-  cloud_firestore: ^0.13.7
-  google_sign_in: ^4.5.1
-  shared_preferences: ^0.5.8
-  fluttertoast: ^7.0.2
-  flutter_auth_buttons: ^0.9.0
+  carousel_pro: ^0.0.13
+  firebase_auth: 
+  google_sign_in:
+  cloud_firestore:
+  firebase_storage:
+  fluttertoast:
+  shared_preferences:
+  image_picker:
+  cached_network_image:
+  intl: 
+  firebase_database:
+  provider:
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
+  carousel_slider: ^1.3.0
+  transparent_image: ^0.1.0
+  flutter_spinkit: ^4.1.2
+  uuid: ^2.2.0
+  flutter_typeahead: ^1.8.7
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.7.3"
-
-flutter_icons:
-    image_path_android: "assets/mainlogo.png"
-    image_path_ios: "assets/mainlogo.png"
-    android: true # can specify file name here e.g. "ic_launcher"
-    ios: true # can specify file name here e.g. "My-Launcher-Icon"
-    adaptive_icon_background: "assets/mainlogo.png" # only available for Android 8.0 devices and above
-    adaptive_icon_foreground: "assets/mainlogo.png" # only available for Android 8.0 devices and aboveflutter_test:
-flutter_test:
+  flutter_test:
     sdk: flutter
 
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -55,28 +51,19 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    - assets/landingbg.png
-    - assets/logo.png
-    - assets/woman.png
-    - assets/logowithtexttoright.png
-    - assets/orangeasthetic.jpg
-    - assets/homepdf1.jpg
-    - assets/homepdf2.jpg
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  #dependencies:
+  assets:
+   - images/
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # https://flutter.io/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
+  # https://flutter.io/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -96,4 +83,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.io/custom-fonts/#from-packages
